# rust-commandline-programming

./: README.md
cat_in_rust/catr/: Cargo.toml  README.md  make-outs.sh
cat_in_rust/catr/src/: lib.rs
cat_in_rust/catr/tests/: blank.txt
echo/: Cargo.toml
echo/src/: main.rs
echo_in_rust/: README.md
echo_in_rust/echo/: output.txt
echo_in_rust/echo/src/: main.rs
echo_in_rust/echo_v2/: output.txt
echo_in_rust/echo_v2/tests/expected/: write_add.txt
echo_in_rust/echo_v3/: Cargo.toml
echo_in_rust/echo_v3/tests/: cli.rs
echo_in_rust/echor/: Cargo.toml
echo_in_rust/echor/tests/: cli.rs
echo_v2/: mk-outs.sh
echo_v2/src/: main.rs
echor/: mk-outs.sh
echor/src/: main.rs
echor/tests/: cli.rs
head_in_rust/headr/: Cargo.toml  hello.txt
head_in_rust/headr/src/: lib.rs  main.rs
