[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

